[gd_scene load_steps=18 format=2]

[ext_resource path="res://Audio/Music/Star Blaster - Main theme.wav" type="AudioStream" id=1]
[ext_resource path="res://Fonts/RacingSansOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menus/NewGameButton.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menus/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Sprites/background.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/Label.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Menus/OptionsButton.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Menus/CustomGameButton.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Menus/Transitions/Transition1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sprites/ClippingMask.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Parallax1.png" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false
border_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_color = Color( 0.8, 0.8, 0.8, 0 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
z_index = 10
script = ExtResource( 4 )

[node name="Transition1" parent="." instance=ExtResource( 9 )]

[node name=" Background" type="Sprite" parent="."]
light_mask = 3
position = Vector2( 288, 512 )
scale = Vector2( 1.91333, 1.27 )
texture = ExtResource( 5 )

[node name="Stars" type="Sprite" parent="."]
position = Vector2( 288, 512 )
scale = Vector2( 1.92, 1.28 )
texture = ExtResource( 11 )

[node name="NewGameButton" type="Button" parent="."]
light_mask = 3
margin_left = 64.0
margin_top = 800.0
margin_right = 512.0
margin_bottom = 908.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "NEW GAME"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameTween" type="Tween" parent="NewGameButton"]

[node name="OptionsButton" type="Button" parent="."]
light_mask = 3
margin_left = 64.0
margin_top = 688.0
margin_right = 512.0
margin_bottom = 796.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "OPTIONS"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButtonTween" type="Tween" parent="OptionsButton"]

[node name="CustomGameButton" type="Button" parent="."]
light_mask = 3
margin_left = 64.0
margin_top = 576.0
margin_right = 512.0
margin_bottom = 684.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "CUSTOM"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomGameTween" type="Tween" parent="CustomGameButton"]

[node name="Label" type="Label" parent="."]
light_mask = 3
margin_left = 1.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 456.0
custom_fonts/font = SubResource( 6 )
text = "STAR
BLASTER"
align = 1
valign = 1
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoTween" type="Tween" parent="Label"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="Mask" type="Light2D" parent="."]
position = Vector2( 0, -1520 )
scale = Vector2( 1, 1.41406 )
z_index = 100
texture = ExtResource( 10 )
offset = Vector2( 288, 512 )
mode = 3
range_item_cull_mask = 2
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="OptionsButton" to="." method="_on_OptionsButton_pressed"]
